red line not showing after deploy to github - try this to fix

--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-* {
-    border: red 1px solid;
-}
 
 #canvas{
     background-image: url(./images/wheelbg.png);
